@@ -8,6 +8,7 @@ build_requires:
   ExtUtils::MakeMaker: 6.59
   Test::More: 0
   Test::NoWarnings: 0
+  Test::Shared::Fixture::Wikibase::Datatype::Lexeme::Wikidata::DogCzechNoun: 0.19
   Test::Shared::Fixture::Wikibase::Datatype::Property::Wikidata::InstanceOf: 0.17
   Unicode::UTF8: 0
   Wikibase::Datatype: 0.03
